# ocaml-parquet

./: LICENSE.md  README.md  dune-project  parquet.opam  parquet.opam.template
lib/: dune  parquet.ml  parquet_types.ml  parquet_types.mli
lib/unix/: dune  parquet_unix.ml  parquet_unix_stubs.c
test/: dune  test_parquet.ml
test/fixtures/: belfast_bottle_banks.parquet  bottlebanksdata.csv
